--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a>
 </body>
 
 </html>
