Complete Stew Chili recipe webpage

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
+
+    <!--Add unordered list of 3 recipes-->
     <a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a>
+    
 </body>
 
 </html>
