--- a/recipes/slow_cooked_stew.html
+++ b/recipes/slow_cooked_stew.html
@@ -8,6 +8,45 @@
 
     <body>
         <h1>Slow-Cooked Stew Meat Chili</h1>
+        <!--Add image of stew here-->
+        <img src="../images/slow_stew.jpeg" alt="Slow-Cooked Stew Meat Chili">
+
+        <!--Add Description heading followed by a paragraph or two describing the recipe-->
+        <h3>Description</h3>
+        <p>This hearty chili is truly a snap to prepare. After browning the beef and stirring in the spices to give them a slightly toasted flavor, you simply toss everything into a slow cooker and let the mixture simmer all day. Garnish with sour cream, chopped fresh parsley, and chopped red onion.</p>
+
+        <p>Per Serving: 268 calories; protein 15.6g; carbohydrates 30.4g; fat 9.3g; cholesterol 23.4mg; sodium 966.9mg.</p>
+
+        <!--Add Ingredients heading followed by unordered list of ingredients-->
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 1/2 tbsp vegetable oil</li>
+            <li>3/4 lb cubed beef stew meat</li>
+            <li>2 tbsp chili powder</li>
+            <li>1 tspn ground cumin</li>
+            <li>2 tbsp AP flour</li>
+            <li>1 (28oz) can diced tomatoes</li>
+            <li>1 (16oz) can black beans, rinsed and drained</li>
+            <li>1 (16oz) can kidney beans, rinsed and drained</li>
+            <li>1 3/4 cups beef broth, divided</li>
+            <li>1 large white onion, chopped</li>
+            <li>1 small green or red bell pepper, chopped</li>
+            <li>1/4 cup chopped fresh parsley</li>
+            <li>2 tbsp barbecue sauce</li>
+            <li>1 1/2 tbsp brown sugar</li>
+            <li>5 cloves garlic, minced</li>
+            <li>3/4 tspn salt</li>
+        </ul>
+
+        <!--Add Steps heading followed by ordered list of step to make the dish-->
+        <h3>Steps</h3>
+        <ol>
+            <li>Heat oil in a large skillet over medium-high heat. Add stew meat and brown for 2 minutes, stirring often. Add chili powder and cumin; cook and stir until fragrant, about 1 minute. Stir in flour and cook for 1 minute more. Transfer meat to a large slow cooker.</li>
+            <br>
+            <li>Add diced tomatoes, black beans, kidney beans, 1 1/2 cups beef broth, onion, bell pepper, parsley, barbecue sauce, brown sugar, garlic, and salt to the slow cooker; stir until well combined.</li>
+            <br>
+            <li>Cover and cook on Low, stirring occasionally, until beef is tender, 6 to 8 hours. Thin the chili with remaining beef broth as it cooks, if consistency is too thick.</li>
+        </ol>
     </body>
 
 </html>
