--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <h1>Odin Recipes</h1>
 
     <!--Add unordered list of 3 recipes-->
-    <a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a>
+    <ul>
+    <li><a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a></li>
+
+    <li><a href="./recipes/baked_ziti_casserole.html">Baked Ziti Casserole</a></li>
+
+    <li><a href="./recipes/creole_gumbo.html">Creole Gumbo</a></li>
+    </ul>
     
 </body>
 
