Complete Ziti webpage

--- a/recipes/baked_ziti_casserole.html
+++ b/recipes/baked_ziti_casserole.html
@@ -10,13 +10,34 @@
         <h1>Baked Ziti Casserole</h1>
 
         <!--Add image of dish here-->
+        <img src="../images/baked_ziti.jpg" alt="Baked Ziti Casserole">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
-
+        <h3>Description</h3>
+        <p>Great ziti dish for any lover of pasta. Easy to make and 'wows' the crowd.</p>
 
         <!--Add Ingredients heading followed by unordered list of ingredients-->
-        
+        <h3>Ingredients</h3>
+        <ul>
+            <li>1 (16oz) package ziti</li>
+            <li>1 (15oz) container ricotta cheese</li>
+            <li>1 1/2 cups tomato sauce</li>
+            <li>1 (8oz) package shredded mozzarella cheese</li>
+            <li>1 egg, slightly beaten</li>
+            <li>1 tspn salt, or to taste</li>
+            <li>1/2 tspn ground black pepper, or to taste</li>
+            <li>2 cups tomato sauce, divided</li>
+            <li>1/4 grated Parmesan cheese</li>
+        </ul>
 
         <!--Add Steps heading followed by ordered list of step to make the dish-->
+        <h3>Steps</h3>
+        <ol>
+            <li>Bring a large pot of lightly salted water to a boil. Cook ziti in boiling water until cooked through but firm to the bite, about 13 minutes; drain. Rinse ziti with cold water until cool; drain.</li>
+            <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+            <li>Mix ziti, ricotta cheese, 1 1/2 cups tomato sauce, mozzarella cheese, egg, salt, and pepper in a large bowl.</li>
+            <li>Spread 1/2 cup tomato sauce into the bottom of a 2 1/2-quart shallow baking dish. Pour ziti mixture into the dish. Top with remaining 1 1/2 cup tomato sauce and Parmesan cheese.</li>
+            <li>Bake in preheated oven until sauce and cheese layer is bubbly and lightly browned, about 30 minutes. Let cool 10 minutes before serving.</li>
+        </ol>
     </body>
 </html>
