Update home page and add style sheets
Center and resize title of each webpage to make them readable and better looking. Defaulted all images to be the same pixel size.

--- a/recipes/creole_gumbo.html
+++ b/recipes/creole_gumbo.html
@@ -2,15 +2,16 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./styles.css">
         <meta charset="utf-8">
         <title>Creole Gumbo</title>
     </head>
 
     <body>
-        <h1>Creole Gumbo</h1>
+        <h1 id="title">Creole Gumbo</h1>
 
         <!--Add image of dish here-->
-        <img src="../images/creole_gumbo.jpg" alt="Creole Gumbo">
+        <img class="image" src="../images/creole_gumbo.jpg" alt="Creole Gumbo">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
         <h3>Description</h3>
