--- a/recipes/slow_cooked_stew.html
+++ b/recipes/slow_cooked_stew.html
@@ -2,14 +2,15 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./styles.css"> 
         <meta charset="utf-8">
         <title>Slow-Cooked Stew Meat Chili </title>
     </head>
 
     <body>
-        <h1>Slow-Cooked Stew Meat Chili</h1>
+        <h1 id="title">Slow-Cooked Stew Meat Chili</h1>
         <!--Add image of stew here-->
-        <img src="../images/slow_stew.jpeg" alt="Slow-Cooked Stew Meat Chili">
+        <img class="image" src="../images/slow_stew.jpeg" alt="Slow-Cooked Stew Meat Chili">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
         <h3>Description</h3>
