--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="utf-8">
     <title>Kam's Recipes</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="title">Odin Recipes</h1>
 
     <!--Add unordered list of 3 recipes-->
     <ul>
-    <li><a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a></li>
+    <li class="list-item"><a href="./recipes/slow_cooked_stew.html">Slow-Cooked Stew Meat Chili</a></li>
 
-    <li><a href="./recipes/baked_ziti_casserole.html">Baked Ziti Casserole</a></li>
+    <li class="list-item"><a href="./recipes/baked_ziti_casserole.html">Baked Ziti Casserole</a></li>
 
-    <li><a href="./recipes/creole_gumbo.html">Creole Gumbo</a></li>
+    <li class="list-item"><a href="./recipes/creole_gumbo.html">Creole Gumbo</a></li>
     </ul>
     
 </body>
