--- a/recipes/baked_ziti_casserole.html
+++ b/recipes/baked_ziti_casserole.html
@@ -2,15 +2,16 @@
 
 <html lang="en">
     <head>
+        <link rel="stylesheet" href="./styles.css">
         <meta charset="utf-8">
         <title>Baked Ziti Casserole</title>
     </head>
 
     <body>
-        <h1>Baked Ziti Casserole</h1>
+        <h1 id="title">Baked Ziti Casserole</h1>
 
         <!--Add image of dish here-->
-        <img src="../images/baked_ziti.jpg" alt="Baked Ziti Casserole">
+        <img class="image" src="../images/baked_ziti.jpg" alt="Baked Ziti Casserole">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
         <h3>Description</h3>
