--- a/recipes/baked_ziti_casserole.html
+++ b/recipes/baked_ziti_casserole.html
@@ -14,10 +14,13 @@
         <img class="image" src="../images/baked_ziti.jpg" alt="Baked Ziti Casserole">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
+        <div class="desc">
         <h3>Description</h3>
         <p>Great ziti dish for any lover of pasta. Easy to make and 'wows' the crowd.</p>
+        </div>
 
         <!--Add Ingredients heading followed by unordered list of ingredients-->
+        <div class="ingredients">
         <h3>Ingredients</h3>
         <ul>
             <li>1 (16oz) package ziti</li>
@@ -30,8 +33,10 @@
             <li>2 cups tomato sauce, divided</li>
             <li>1/4 grated Parmesan cheese</li>
         </ul>
+        </div>
 
         <!--Add Steps heading followed by ordered list of step to make the dish-->
+        <div class="steps">
         <h3>Steps</h3>
         <ol>
             <li>Bring a large pot of lightly salted water to a boil. Cook ziti in boiling water until cooked through but firm to the bite, about 13 minutes; drain. Rinse ziti with cold water until cool; drain.</li>
@@ -40,5 +45,6 @@
             <li>Spread 1/2 cup tomato sauce into the bottom of a 2 1/2-quart shallow baking dish. Pour ziti mixture into the dish. Top with remaining 1 1/2 cup tomato sauce and Parmesan cheese.</li>
             <li>Bake in preheated oven until sauce and cheese layer is bubbly and lightly browned, about 30 minutes. Let cool 10 minutes before serving.</li>
         </ol>
+        </div>
     </body>
 </html>
