--- a/recipes/creole_gumbo.html
+++ b/recipes/creole_gumbo.html
@@ -14,60 +14,65 @@
         <img class="image" src="../images/creole_gumbo.jpg" alt="Creole Gumbo">
 
         <!--Add Description heading followed by a paragraph or two describing the recipe-->
-        <h3>Description</h3>
-        <p>New Orleans-style gumbo is a true taste of Southern tradition. This boldly flavored stew is bursting with fresh, filling ingredients like bell pepper, sausage, stewed tomatoes, and crabmeat. Hot sauce and Creole seasonings add a kick that makes this Lousiana dish a favorite amongst our community of home cooks. Learn how to make the best homestyle gumbo right here.</p>
+        <div class="desc">
+            <h3>Description</h3>
+            <p>New Orleans-style gumbo is a true taste of Southern tradition. This boldly flavored stew is bursting with fresh, filling ingredients like bell pepper, sausage, stewed tomatoes, and crabmeat. Hot sauce and Creole seasonings add a kick that makes this Lousiana dish a favorite amongst our community of home cooks. Learn how to make the best homestyle gumbo right here.</p>
 
-        <p>Gumbo is one of the most famous dishes to result from Louisiana's shared Creole-Cajun heritage. Gumbo falls somewhere between a thick stew and a hearty soup and can contain ingredients such as chicken, sausage, ham, seafood, okra, tomatoes, and greens.</p>
+            <p>Gumbo is one of the most famous dishes to result from Louisiana's shared Creole-Cajun heritage. Gumbo falls somewhere between a thick stew and a hearty soup and can contain ingredients such as chicken, sausage, ham, seafood, okra, tomatoes, and greens.</p>
 
-        <p>As varied as the recipes can be, there are a few ingredients that all gumbos have in common: homemade stock; the "holy trinity" of celery, onions, and green peppers; and roux.</p>
+            <p>As varied as the recipes can be, there are a few ingredients that all gumbos have in common: homemade stock; the "holy trinity" of celery, onions, and green peppers; and roux.</p>
+        </div>
 
         <!--Add Ingredients heading followed by unordered list of ingredients-->
-        <h3>Ingredients</h3>
-        <ul>
-            <li>1 cup AP flour</li>
-            <li>3/4 cup bacon drippings</li>
-            <li>1 cup chopped celery</li>
-            <li>1 large white onion, chopped</li>
-            <li>1 large green bell pepper</li>
-            <li>5 cloves garlic, minced</li>
-            <li>1 lb andouille sausage</li>
-            <li>3 qt water</li>
-            <li>6 cubes beef bouillon</li>
-            <li>1 tbsp white sugar</li>
-            <li>salt to taste</li>
-            <li>2 tbsp Tabasco</li>
-            <li>1/2 tspn Tony Chachere's</li>
-            <li>4 bay leaves</li>
-            <li>1/2 tspn dried thyme</li>
-            <li>1 (14.5oz) can stewed tomato</li>
-            <li>1 (6oz) can tomato sauce</li>
-            <li>4 tspn file powder, divided</li>
-            <li>2 tbsp bacon drippings</li>
-            <li>2 (10oz) packages frozen cut okra</li>
-            <li>2 tbsp distilled white vinegar</li>
-            <li>1 lb lump crabmeat</li>
-            <li>3 lb uncooked medium shrimp, peeled and deveined</li>
-            <li>2 tbsp Worcestershire sauce</li>
-        </ul>        
+        <div class="ingredients">
+            <h3>Ingredients</h3>
+            <ul>
+                <li>1 cup AP flour</li>
+                <li>3/4 cup bacon drippings</li>
+                <li>1 cup chopped celery</li>
+                <li>1 large white onion, chopped</li>
+                <li>1 large green bell pepper</li>
+                <li>5 cloves garlic, minced</li>
+                <li>1 lb andouille sausage</li>
+                <li>3 qt water</li>
+                <li>6 cubes beef bouillon</li>
+                <li>1 tbsp white sugar</li>
+                <li>salt to taste</li>
+                <li>2 tbsp Tabasco</li>
+                <li>1/2 tspn Tony Chachere's</li>
+                <li>4 bay leaves</li>
+                <li>1/2 tspn dried thyme</li>
+                <li>1 (14.5oz) can stewed tomato</li>
+                <li>1 (6oz) can tomato sauce</li>
+                <li>4 tspn file powder, divided</li>
+                <li>2 tbsp bacon drippings</li>
+                <li>2 (10oz) packages frozen cut okra</li>
+                <li>2 tbsp distilled white vinegar</li>
+                <li>1 lb lump crabmeat</li>
+                <li>3 lb uncooked medium shrimp, peeled and deveined</li>
+                <li>2 tbsp Worcestershire sauce</li>
+            </ul>  
+        </div>      
 
         <!--Add Steps heading followed by ordered list of step to make the dish-->
-        <h4>Roux:</h4>
-        <ol>
-            <li>Whisk together flour and 3/4 cup bacon drippings in a large, heavy saucepan over medium-low heat until smooth. Cook roux, whisking constantly, until it turns a rich mahogany brown color. This can take 20 to 30 minutes; watch heat carefully and whisk constantly or roux will burn. Remove from heat; continue whisking until mixture stops cooking.</li>
-        </ol>
+        <div class="steps">
+            <h4>Roux:</h4>
+            <ol>
+                <li>Whisk together flour and 3/4 cup bacon drippings in a large, heavy saucepan over medium-low heat until smooth. Cook roux, whisking constantly, until it turns a rich mahogany brown color. This can take 20 to 30 minutes; watch heat carefully and whisk constantly or roux will burn. Remove from heat; continue whisking until mixture stops cooking.</li>
+            </ol>
 
-        <h4>Gumbo:</h4>
-        <ol>
-            <li>Place celery, onion, green bell pepper, and garlic into the work bowl of a food processor, and pulse until all vegetables are very finely chopped. Stir vegetables into the roux, and mix in sausage. Bring mixture to a simmer over medium-low heat, and cook until vegetables are tender, 10 to 15 minutes. Remove from heat, and set aside.</li>
+            <h4>Gumbo:</h4>
+            <ol>
+                <li>Place celery, onion, green bell pepper, and garlic into the work bowl of a food processor, and pulse until all vegetables are very finely chopped. Stir vegetables into the roux, and mix in sausage. Bring mixture to a simmer over medium-low heat, and cook until vegetables are tender, 10 to 15 minutes. Remove from heat, and set aside.</li>
 
-            <li>Combine water and beef bouillon cubes in a large Dutch oven or soup pot and bring to a boil over medium-high heat. Stir until bouillon cubes dissolve, then whisk roux mixture into the boiling water.</li>
+                <li>Combine water and beef bouillon cubes in a large Dutch oven or soup pot and bring to a boil over medium-high heat. Stir until bouillon cubes dissolve, then whisk roux mixture into the boiling water.</li>
 
-            <li>Reduce heat to a simmer, and mix in sugar, salt, hot pepper sauce, Cajun seasoning, bay leaves, thyme, stewed tomatoes, and tomato sauce. Simmer soup over low heat for 1 hour; mix in 2 teaspoons of file gumbo powder at the 45-minute mark.</li>
+                <li>Reduce heat to a simmer, and mix in sugar, salt, hot pepper sauce, Cajun seasoning, bay leaves, thyme, stewed tomatoes, and tomato sauce. Simmer soup over low heat for 1 hour; mix in 2 teaspoons of file gumbo powder at the 45-minute mark.</li>
 
-            <li>Meanwhile, melt 2 tablespoons bacon drippings in a skillet over medium heat. Add okra and vinegar and cook for 15 minutes; remove okra with a slotted spoon, and stir into the simmering gumbo.</li>
+                <li>Meanwhile, melt 2 tablespoons bacon drippings in a skillet over medium heat. Add okra and vinegar and cook for 15 minutes; remove okra with a slotted spoon, and stir into the simmering gumbo.</li>
 
-            <li>Mix in crabmeat, shrimp, and Worcestershire sauce, and simmer until flavors have blended, 45 more minutes. Stir in 2 more teaspoons of file gumbo powder just before serving.</li>
-        </ol>
-        
+                <li>Mix in crabmeat, shrimp, and Worcestershire sauce, and simmer until flavors have blended, 45 more minutes. Stir in 2 more teaspoons of file gumbo powder just before serving.</li>
+            </ol>
+        </div>
     </body>
 </html>
